examples/apps/custom-dns/all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: apirules-cloudflare-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
    - port:
        number: 443
        name: https-apirules
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: apirules-cloudflare-api-tls-7f989
      hosts:
        - '*.apirules.kyma.cloud'
